# Draftly

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/src/: app.py  config.py  main.py
backend/src/core/: blog_agent.py  llm_client.py
backend/src/prompts/: system_prompts.py
backend/src/utils/: helpers.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: BlogPreview.tsx  DraftForm.tsx  Footer.tsx  GeneratorCard.tsx  Hero.tsx  LoadingState.tsx  Navbar.tsx  SourcesSection.tsx
frontend/lib/: api.ts
